# Computer-Graphics-Exam

./: .gitignore  CMakeLists.txt  README.org
applications/: CMakeLists.txt  Exam.cpp
applications/Exam/: Exam.cpp
applications/Exam/inc/: Audio.h  Camera.h  ImportModel.h  InstancedModel.h  Scene.h  Skybox.h  Terrain.h  Water.h
applications/Exam/src/: Audio.cpp  Camera.cpp  ImportModel.cpp  InstancedModel.cpp  Scene.cpp  Skybox.cpp  Terrain.cpp  Water.cpp
assets/models/Duck/: duck.mtl
assets/models/Tree/: PineTree.mtl
assets/shaders/: birds.frag  birds.vert  dir_lights_shadow.frag  dir_lights_shadow.vert  directional_shadowmap.vert  instanced.vert  instanced_minimap.vert  instanced_shadowmap.vert  lights.frag  lights.vert  lights_shadowmap.frag  lights_shadowmap.vert  minimap.vert  mvp_tex.frag  quad.frag  skybox.frag  skybox.vert  terrain.vert
core/: CMakeLists.txt
core/inc/: FrameBuffer.h  IndexBuffer.h  Model.h  Shader.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Window.h
core/src/: FrameBuffer.cpp  IndexBuffer.cpp  Model.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
rendering/: CMakeLists.txt
rendering/inc/: DirectionalLight.h  Light.h  Material.h  PointLight.h  Renderer.h  ShadowMap.h  SpotLight.h
rendering/src/: DirectionalLight.cpp  Light.cpp  Material.cpp  PointLight.cpp  Renderer.cpp  ShadowMap.cpp  SpotLight.cpp
